--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@cyhnkckali/vue3-color-picker": "^1.1.9",
     "@headlessui/vue": "^1.7.22",
     "@heroicons/vue": "^2.1.3",
+    "@vueuse/components": "^10.10.0",
     "@vueuse/core": "^10.9.0",
     "aframe": "^1.5.0",
     "aframe-atlas-uvs-component": "^3.0.0",
