--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@cyhnkckali/vue3-color-picker": "^1.1.9",
     "@headlessui/vue": "^1.7.22",
     "@heroicons/vue": "^2.1.3",
+    "@tweakpane/core": "^2.0.3",
     "@vueuse/components": "^10.10.0",
     "@vueuse/core": "^10.9.0",
     "aframe": "^1.5.0",
@@ -28,6 +29,7 @@
     "three": "0.158.0",
     "three-mesh-ui": "^6.5.4",
     "troika-three-text": "^0.49.0",
+    "tweakpane": "^4.0.3",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
